Simplify project structure to remove app package
