# api/common/controller.go
@@ -20,7 +20,7 @@ func (c Controller) RegisterRoutes(router gin.IRouter) {
 // @Description Get server healthy
 // @Success 200
 // @Tags App API
-// @Router /api/healthy [get]
+// @Router /healthy [get]
 func (c *Controller) getHealthy(ctx *gin.Context) {
 	ctx.Status(200)
 }
